--- a/MaterialDesignPro4/app/src/main/res/values/strings.xml
+++ b/MaterialDesignPro4/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MaterialDesignPro4</string>
+    <string name="drawer_open">Open</string>
+    <string name="drawer_close">Close</string>
 </resources>
